--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ p{
 
 .bottom-cloud {
   /*parent is the top container so positioning will be according to that*/
-  position: absolute;
+  position: relative;
   bottom: 300px;
   left: 300px;
 }
